# soccer_player_tracking

./: .gitignore  README.md  conftest.py  pyproject.toml  setup.cfg
src/soccer_player_tracking/: backup_eng.py  backup_main.py  engine.py  estimation.py  main.py  sanity_test.py  simulation.py  visualization.py
tests/: test_engine.py
