[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soccer_player_tracking"
version = "0.1.0"
description = ""
authors = [{ name = "Brandon Keltz", email = "keltzbm@icloud.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
